--- a/src/codepens/liquidBack/index.html
+++ b/src/codepens/liquidBack/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
-  <script src="index.js"></script>
+  <body>
+    <div class="bg-url bg-width bg-height"></div>
+    <script src="index.js"></script>
+  </body>
 </html>
